--- a/laravel/resources/css/app.css
+++ b/laravel/resources/css/app.css
@@ -1,3 +1,138 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
+  }
+
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+/*Fonts and stuff*/
+h1,h2,h3,h4,h5,h6{
+  font-family: neue-haas-grotesk-display,sans-serif;
+  font-weight: 700;
+  line-height: 85%;
+  letter-spacing: 0em;
+}
+body,p,li,a{
+  font-family: neue-haas-grotesk-display,sans-serif;
+  font-weight: 500;
+  line-height: 180%;
+  letter-spacing: .044em;
+
+}
+/*Mobile Styles*/
+/*Header*/
+header{
+  background-color:#334057;
+  color:white;
+}
+
+/*Menu*/
+.main-menu-wrap{
+  display:flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.main-menu-wrap a{
+  color:white;
+  text-transform: uppercase;
+}
+
+/*Navigation*/
+
+
+/*Footer*/
+footer{
+  background-color: #333333;
+  color:white;
+}
+
+
+
+/*Media Queries*/
+
+/*ipad styles*/
+@media only screen and (min-width:600px) {
+
+}
+
+/*small desktop & large tablet*/
+@media only screen and (min-width:800px) {
+
+}
+
+/*Desktop*/
+@media only screen and (min-width:981px) {
+
+}
+
+/*Large Desktop*/
+@media only screen and (min-width:1300px) {
+
+}
