preliminary text/styling

--- a/laravel/resources/css/app.css
+++ b/laravel/resources/css/app.css
@@ -79,6 +79,15 @@ h1,h2,h3,h4,h5,h6{
   line-height: 85%;
   letter-spacing: 0em;
 }
+h1{
+  margin-top:1em;
+  margin-bottom:.25em;
+  font-size:40pt;
+}
+h2,h3{
+  margin-top:1em;
+  margin-bottom:.25em;
+}
 body,p,li,a{
   font-family: neue-haas-grotesk-display,sans-serif;
   font-weight: 500;
@@ -113,6 +122,30 @@ footer{
   color:white;
 }
 
+/*Standouts*/
+.standout{
+  background-image: linear-gradient(0deg, rgba(255, 255, 126, 0.3), rgba(255, 255, 126, 0.3)), url(/images/paper.jpg);
+  font-weight: 700;
+  padding:5px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-top:20px;
+  position:relative;
+  clip-path: polygon(1% 5%,100% 1%,100% 95%,0% 100%);
+}
+.standout::after{
+  content:" ";
+  position:absolute;
+  bottom:.15em;
+  transform:rotate(-1deg);
+  left:0;
+  background-color: #111;
+  width:95%;
+  height:.1em;
+  display: block;
+  margin-left: 2%;
+
+}
 
 
 /*Media Queries*/
