--- a/laravel/public/css/app.css
+++ b/laravel/public/css/app.css
@@ -94,6 +94,17 @@ h1,h2,h3,h4,h5,h6{
   letter-spacing: 0em;
 }
 
+h1{
+  margin-top:1em;
+  margin-bottom:.25em;
+  font-size:40pt;
+}
+
+h2,h3{
+  margin-top:1em;
+  margin-bottom:.25em;
+}
+
 body,p,li,a{
   font-family: neue-haas-grotesk-display,sans-serif;
   font-weight: 500;
@@ -130,6 +141,33 @@ header{
 footer{
   background-color: #333333;
   color:white;
+}
+
+/*Standouts*/
+
+.standout{
+  background-image: linear-gradient(0deg, rgba(255, 255, 126, 0.3), rgba(255, 255, 126, 0.3)), url(/images/paper.jpg);
+  font-weight: 700;
+  padding:5px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-top:20px;
+  position:relative;
+  -webkit-clip-path: polygon(1% 5%,100% 1%,100% 95%,0% 100%);
+          clip-path: polygon(1% 5%,100% 1%,100% 95%,0% 100%);
+}
+
+.standout::after{
+  content:" ";
+  position:absolute;
+  bottom:.15em;
+  transform:rotate(-1deg);
+  left:0;
+  background-color: #111;
+  width:95%;
+  height:.1em;
+  display: block;
+  margin-left: 2%;
 }
 
 /*Media Queries*/
