--- a/laravel/public/css/app.css
+++ b/laravel/public/css/app.css
@@ -85,19 +85,79 @@ select {
   }
 }
 
+/*Colors*/
+
+.smartblue{
+  color:#334057;
+}
+
+.notblack{
+  color:#333333;
+}
+
+.smartred{
+  color:#ff495c;
+}
+
+.offgreen{
+  color:#ebf5ee;
+}
+
+.smartbluebg{
+  background-color:#334057;
+}
+
+.notblackbg{
+  background-color:#333333;
+}
+
+.smartredbg{
+  background-color:#ff495c;
+}
+
+.offgreenbg, body{
+  background-color:#ebf5ee;
+}
+
+/*Links and buttons*/
+
+a{
+  text-decoration: none;
+}
+
+.primary-button{
+  background-color:#FF495C;
+  border:2px solid #FF495C;
+  color:white;
+  border-radius: 100px;
+  padding:7px 20px;
+  transition:all .2s ease-in-out;
+  text-transform: uppercase;
+  font-weight:bold;
+  margin-bottom:10px;
+  display:inline-block;
+  width: auto;
+}
+
+.primary-button:hover{
+  background-color:white;
+  color:#FF495C;
+}
+
 /*Fonts and stuff*/
 
 h1,h2,h3,h4,h5,h6{
   font-family: neue-haas-grotesk-display,sans-serif;
   font-weight: 700;
-  line-height: 85%;
+  line-height: 100%;
   letter-spacing: 0em;
 }
 
 h1{
   margin-top:1em;
   margin-bottom:.25em;
-  font-size:40pt;
+  font-size:38pt;
+  line-height:1.3em;
 }
 
 h2,h3{
@@ -105,11 +165,23 @@ h2,h3{
   margin-bottom:.25em;
 }
 
+h5{
+  font-weight:200;
+  line-height:1em;
+  margin-bottom:5px;
+  font-size:14pt;
+  text-transform: uppercase;
+}
+
 body,p,li,a{
   font-family: neue-haas-grotesk-display,sans-serif;
   font-weight: 500;
   line-height: 180%;
   letter-spacing: .044em;
+}
+
+p{
+  margin-bottom:1em;
 }
 
 /*Mobile Styles*/
@@ -123,24 +195,132 @@ header{
 
 /*Menu*/
 
-.main-menu-wrap{
+nav{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap:wrap;
+  width:100%;
+  max-width:1280px;
+  padding:15px;
+}
+
+.logo-wrap{
+  max-width:200px;
+  width:35%;
+}
+
+#menu-open{
+  width:50%;
+  justify-content: flex-end;
+  align-items: flex-end;
+  display: flex;
+}
+
+#menu-open img{
+  width:20px;
+  height:20px;
+  margin-bottom:5px;
+  transition: transform .2s ease-in-out;
+}
+
+.show-menu .main-menu-wrap{
   display:flex;
+}
+
+.show-menu #menu-open img{
+  transform: rotate(180deg);
+}
+
+.main-menu-wrap{
+  display:none;
   flex-direction: column;
   flex-wrap: wrap;
+  margin:0 auto;
+  width:100%;
+  align-items: flex-start;
 }
 
 .main-menu-wrap a{
   color:white;
   text-transform: uppercase;
+  font-weight: bolder;
+  position:relative;
 }
 
-/*Navigation*/
+.main-menu-wrap a::after{
+  content: " ";
+  position: absolute;
+  background-color: white;
+  bottom:2px;
+  left:0;
+  height:3px;
+  width:0%;
+  transition: width .2s ease-in-out;
+}
+
+.main-menu-wrap a:hover::after{
+  width:100%;
+}
+
+/*homepage*/
+
+.content-wrap{
+  margin: 0 30px;
+}
 
 /*Footer*/
 
 footer{
-  background-color: #333333;
+  background-color:#334057;
   color:white;
+}
+
+.services-menu{
+  display:flex;
+  margin:5px auto;
+  padding:0px;
+  justify-content:space-between;
+  background-color:#ff495c;
+  width:100%;
+  padding:15px;
+}
+
+.services-menu li{
+  list-style-type:none;
+  text-transform:uppercase;
+}
+
+.services-menu li a{
+  color:white;
+  font-weight: bold;
+}
+
+.desktop-flex{
+  display:none;
+}
+
+#footer-info{
+  padding:15px;
+}
+
+.footer-contact{
+  padding:15px;
+}
+
+.footer-contact a{
+  color:white;
+  font-weight:bold;
+}
+
+.social-links{
+  display:flex;
+  justify-content: space-between;
+  padding:5px 15px;
+}
+
+.social-links a{
+  width:15%;
+  max-width:30px;
 }
 
 /*Standouts*/
@@ -151,10 +331,10 @@ footer{
   padding:5px;
   background-size: cover;
   background-repeat: no-repeat;
-  margin-top:20px;
   position:relative;
   -webkit-clip-path: polygon(1% 5%,100% 1%,100% 95%,0% 100%);
           clip-path: polygon(1% 5%,100% 1%,100% 95%,0% 100%);
+  display: inline-block;
 }
 
 .standout::after{
@@ -166,7 +346,6 @@ footer{
   background-color: #111;
   width:95%;
   height:.1em;
-  display: block;
   margin-left: 2%;
 }
 
@@ -180,11 +359,46 @@ footer{
 /*small desktop & large tablet*/
 
 @media only screen and (min-width:800px) {
+  .section{
+    width:80%;
+    max-width:1280px;
+    margin:0 auto;
+    display:flex;
+    justify-content: space-between;
+    flex-wrap:wrap;
+  }
+
+  .d-half{
+    width:48.5%;
+  }
+
+  .do-1{
+    order:1;
+  }
+
+  .do-2{
+    order:2;
+  }
+
+  .do-3{
+    order:3;
+  }
+
+  .d-float-right{
+    float:right;
+  }
 }
 
 /*Desktop*/
 
 @media only screen and (min-width:981px) {
+  .desktop-flex{
+    display:flex;
+  }
+
+  .mobile-flex{
+    display:none;
+  }
 }
 
 /*Large Desktop*/
