--- a/laravel/resources/css/app.css
+++ b/laravel/resources/css/app.css
@@ -227,7 +227,13 @@ nav{
 footer{
   background-color:#334057;
   color:white;
-
+}
+.service-menu-wrap{
+  background-color:#ff495c;
+}
+.footer-contact, .social-links, #footer-info{
+  width:90%;
+  margin:0 auto;
 }
 .services-menu{
   display:flex;
@@ -235,7 +241,7 @@ footer{
   padding:0px;
   justify-content:space-between;
   background-color:#ff495c;
-  width:100%;
+  width:90%;
   padding:15px;
 }
 .services-menu li{
@@ -303,6 +309,40 @@ footer{
 
 /*small desktop & large tablet*/
 @media only screen and (min-width:800px) {
+  /*Header & Menu*/
+  nav{
+    max-width:1500px;
+    width: 80%;
+    margin:0px auto;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #menu-open{
+    display:none;
+  }
+  .logo-wrap{
+    width:17.5%;
+  }
+  .main-menu-wrap{
+    display:flex;
+    width:80%;
+    max-width:800px;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-right:0px;
+  }
+  /*Footer*/
+
+  .services-menu.desktop-flex{
+    max-width:1080px;
+    width:80%;
+  }
+  .footer-contact, .social-links, #footer-info{
+    width:80%;
+    max-width:1080px;
+    margin: 0 auto;
+  }
   .section{
     width:80%;
     max-width:1280px;
@@ -326,6 +366,8 @@ footer{
   .d-float-right{
     float:right;
   }
+
+
 }
 
 /*Desktop*/
@@ -340,5 +382,8 @@ footer{
 
 /*Large Desktop*/
 @media only screen and (min-width:1300px) {
-
+  /*Footer*/
+  .services-menu.desktop-flex,.footer-contact, .social-links, #footer-info{
+    max-width:1280px;
+  }
 }
