--- a/laravel/public/css/app.css
+++ b/laravel/public/css/app.css
@@ -258,6 +258,10 @@ nav{
   transition: width .2s ease-in-out;
 }
 
+.main-menu-wrap a.primary-button::after{
+  display: none!important;
+}
+
 .main-menu-wrap a:hover::after{
   width:100%;
 }
@@ -394,6 +398,7 @@ footer{
     flex-direction: row;
     justify-content: space-around;
     margin-right:0px;
+    align-items: center;
   }
 
   /*Footer*/
