--- a/laravel/resources/css/app.css
+++ b/laravel/resources/css/app.css
@@ -347,7 +347,7 @@ footer{
     max-width:1080px;
     margin: 0 auto;
   }
-  .section{
+  .section,section{
     width:80%;
     max-width:1280px;
     margin:0 auto;
