--- a/laravel/public/css/app.css
+++ b/laravel/public/css/app.css
@@ -184,6 +184,7 @@ p{
   margin-bottom:1em;
 }
 
+
 /*Mobile Styles*/
 
 /*Header*/
@@ -370,14 +371,14 @@ footer{
 }
 
 .project-description{
-  background-color: red;
-  width:40%;
+  width:45%;
   height: 100%;
 }
 
 .imac-outer-wrap{
-  position:relative;
-  width:55%;
+  position:sticky;
+  width:50%;
+  bottom: 50px;
 }
 
 .imac-wrap{
@@ -912,7 +913,9 @@ a.viewsource:before {
 
 @media only screen and (min-width:800px) {
   /*Header & Menu*/
-
+  .is-100{
+    width:100%;
+  }
   nav{
     max-width:1500px;
     width: 80%;
@@ -1004,4 +1007,3 @@ a.viewsource:before {
     max-width:1280px;
   }
 }
-
