--- a/laravel/public/css/app.css
+++ b/laravel/public/css/app.css
@@ -184,7 +184,6 @@ p{
   margin-bottom:1em;
 }
 
-
 /*Mobile Styles*/
 
 /*Header*/
@@ -371,14 +370,14 @@ footer{
 }
 
 .project-description{
-  width:45%;
+  background-color: red;
+  width:40%;
   height: 100%;
 }
 
 .imac-outer-wrap{
-  position:sticky;
-  width:50%;
-  bottom: 50px;
+  position:relative;
+  width:55%;
 }
 
 .imac-wrap{
@@ -389,12 +388,297 @@ footer{
   left:50%;
 }
 
+/* Homepage panel elements */
+
+.panels{
+  margin-top: 20px;
+  display:flex;
+  flex-wrap: wrap;
+  height:85vh;
+  justify-content: space-between;
+  align-items: stretch;
+  transition: all ease-in-out .2s;
+}
+
+.panel-wrap{
+  width:100%;
+  height:33%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: space-between;
+  perspective: 1000px;
+  transition: all ease-in-out .5s;
+}
+
+.panel-collapse{
+  flex-wrap: nowrap!important;
+  justify-content: space-between;
+  height:30vh;
+  min-height:250px;
+}
+
+.panel{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  width: 49.5%;
+  height: 100%;
+  position: relative;
+  perspective: 1000px;
+  transition: all ease-in-out .2s;
+}
+
+.ideas h3{
+  text-align:center;
+  font-size: 60pt;
+  margin-top:30px;
+}
+
+.ideas h2{
+  text-align:center;
+}
+
+.panel-wrap-shrink{
+  width: 39.5%;
+  height: 100%;
+}
+
+.panel-shrink{
+  width: 49%;
+}
+
+.panel-wrap.panel-wrap-shrink:first-of-type{
+  width:19%;
+}
+
+.design-panel.panel-shrink{
+  width:100%;
+}
+
+.design-panel.panel-shrink .panel-back{
+  width:100%;
+}
+
+.panel-remove{
+  display: none;
+}
+
+.panel h2{
+  margin:0!important;
+  text-align: center;
+}
+
+.panel-front{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  position: absolute;
+  height: 100%;
+  background: white;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-animation-fill-mode: forwards!important;
+          animation-fill-mode: forwards!important;
+}
+
+.panel-back{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  position: absolute;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  transform: rotateY(180deg);
+  -webkit-animation-fill-mode: forwards!important;
+          animation-fill-mode: forwards!important;
+}
+
+.big-letter{
+  color:white;
+  font-size:60pt;
+}
+
+.web-panel{
+  -webkit-animation: .5s ease-out 5s 1 forwards hideObject;
+          animation: .5s ease-out 5s 1 forwards hideObject;
+}
+
+.web-panel .panel-front{
+  -webkit-animation: 1s ease-out .5s 1 flipCardFront;
+          animation: 1s ease-out .5s 1 flipCardFront;
+}
+
+.web-panel .panel-back{
+  background-image: url("/images/websites/smart-space-office-tiny.jpg");
+  background-size: cover;
+  background-position: top;
+  background-attachment: scroll;
+  -webkit-animation: 1s ease-out .5s 1 flipCardBack,2s ease-out 1.5s 1 forwards scrollPage;
+          animation: 1s ease-out .5s 1 flipCardBack,2s ease-out 1.5s 1 forwards scrollPage;
+}
+
+.design-panel .panel-front{
+  -webkit-animation: .7s ease-out 1.2s 1 flipCardFront;
+          animation: .7s ease-out 1.2s 1 flipCardFront;
+}
+
+.design-panel .panel-back{
+  -webkit-animation: .7s ease-out 1.2s 1 flipCardBack;
+          animation: .7s ease-out 1.2s 1 flipCardBack;
+}
+
+.social-panel .panel-front{
+  -webkit-animation: .7s ease-out 1.9s 1 flipCardFront;
+          animation: .7s ease-out 1.9s 1 flipCardFront;
+}
+
+.social-panel .panel-back{
+  -webkit-animation: .7s ease-out 1.9s 1 flipCardBack;
+          animation: .7s ease-out 1.9s 1 flipCardBack;
+}
+
+.video-panel .panel-front{
+  -webkit-animation: .7s ease-out 2.6s 1 flipCardFront;
+          animation: .7s ease-out 2.6s 1 flipCardFront;
+}
+
+.video-panel .panel-back{
+  -webkit-animation: .7s ease-out 2.6s 1 flipCardBack;
+          animation: .7s ease-out 2.6s 1 flipCardBack;
+}
+
+.seo-panel .panel-front{
+  -webkit-animation: .7s ease-out 3.3s 1 flipCardFront;
+          animation: .7s ease-out 3.3s 1 flipCardFront;
+}
+
+.seo-panel .panel-back{
+  -webkit-animation: .7s ease-out 3.3s 1 flipCardBack;
+          animation: .7s ease-out 3.3s 1 flipCardBack;
+}
+
+.branding-panel .panel-front{
+  -webkit-animation: .7s ease-out 4s 1 flipCardFront;
+          animation: .7s ease-out 4s 1 flipCardFront;
+}
+
+.branding-panel .panel-back{
+  -webkit-animation: .7s ease-out 4s 1 flipCardBack;
+          animation: .7s ease-out 4s 1 flipCardBack;
+}
+
+@-webkit-keyframes flipCardBack {
+  0% {
+    transform: rotateY(180deg);
+  }
+
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+
+@keyframes flipCardBack {
+  0% {
+    transform: rotateY(180deg);
+  }
+
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+
+@-webkit-keyframes flipCardFront {
+  0% {
+    transform: rotateY(0deg);
+  }
+
+  100% {
+    transform: rotateY(180deg);
+  }
+}
+
+@keyframes flipCardFront {
+  0% {
+    transform: rotateY(0deg);
+  }
+
+  100% {
+    transform: rotateY(180deg);
+  }
+}
+
+@-webkit-keyframes scrollPage {
+  0% {
+    background-position: top;
+  }
+
+  100% {
+    background-position: bottom;
+  }
+}
+
+@keyframes scrollPage {
+  0% {
+    background-position: top;
+  }
+
+  100% {
+    background-position: bottom;
+  }
+}
+
+@-webkit-keyframes hideObject {
+  0% {
+    transform: scale(1);
+  }
+
+  100%{
+    transform: scale(0);
+  }
+}
+
+@keyframes hideObject {
+  0% {
+    transform: scale(1);
+  }
+
+  100%{
+    transform: scale(0);
+  }
+}
+
+.panel.web-panel{
+}
+
+.web-panel .panel-back{
+}
+
+.panel.social-panel{
+}
+
+.panel.seo-panel{
+}
+
+.panel.design-panel{
+}
+
+.panel.video-panel{
+}
+
+.panel.branding-panel{
+}
+
 /* The imac with borders */
 
 .imac {
   margin:5px 0px;
   transform-origin: 0 0; /* Scaled down for a better Try-it experience (change to 1 for full scale) */
   transform: scale(.6) translate(-50%); /* Scaled down for a better Try-it experience (change to 1 for full scale) */
+  position: -webkit-sticky;
   position: sticky;
   width: 80vw;
   max-width:1366px;
@@ -913,9 +1197,7 @@ a.viewsource:before {
 
 @media only screen and (min-width:800px) {
   /*Header & Menu*/
-  .is-100{
-    width:100%;
-  }
+
   nav{
     max-width:1500px;
     width: 80%;
@@ -1007,3 +1289,4 @@ a.viewsource:before {
     max-width:1280px;
   }
 }
+
