--- a/laravel/public/css/app.css
+++ b/laravel/public/css/app.css
@@ -370,7 +370,6 @@ footer{
 }
 
 .project-description{
-  background-color: red;
   width:40%;
   height: 100%;
 }
@@ -676,13 +675,13 @@ footer{
 
 .imac {
   margin:5px 0px;
-  transform-origin: 0 0; /* Scaled down for a better Try-it experience (change to 1 for full scale) */
-  transform: scale(.6) translate(-50%); /* Scaled down for a better Try-it experience (change to 1 for full scale) */
+  transform-origin: 0 0;
+  transform: scale(.6) translate(-60%);
   position: -webkit-sticky;
   position: sticky;
-  width: 80vw;
+  width: 72vw;
   max-width:1366px;
-  height:50vw;
+  height:45vw;
   max-height: 768px;
   border-radius: 30px 30px 25px 25px;
   border-style: solid;
