--- a/laravel/public/css/app.css
+++ b/laravel/public/css/app.css
@@ -119,6 +119,12 @@ select {
   background-color:#ebf5ee;
 }
 
+/*Spacing Classes*/
+
+.mt-30{
+  margin-top:30px;
+}
+
 /*Links and buttons*/
 
 a{
@@ -156,7 +162,7 @@ h1,h2,h3,h4,h5,h6{
 h1{
   margin-top:1em;
   margin-bottom:.25em;
-  font-size:38pt;
+  font-size:32pt;
   line-height:1.3em;
 }
 
@@ -176,7 +182,7 @@ h5{
 body,p,li,a{
   font-family: neue-haas-grotesk-display,sans-serif;
   font-weight: 500;
-  line-height: 180%;
+  line-height: 200%;
   letter-spacing: .044em;
 }
 
@@ -268,8 +274,104 @@ nav{
 
 /*homepage*/
 
-.content-wrap{
+.content-wrap section, .section{
   margin: 0 30px;
+}
+
+.bg-header{
+  background-color:#334057;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: none;
+  width:100%;
+}
+
+.bg-header h2{
+  padding-top:140px;
+  padding-bottom:50px;
+  margin-bottom: 30px;
+  color:white;
+  text-align: center;
+}
+
+.header-start{
+  background-color:#334057;
+  background-image:url(/images/question-blue.jpg);
+}
+
+.header-whats-next{
+  background-color:#ff495c;
+  background-image:url(/images/branding-strategy.jpg);
+}
+
+.header-seo{
+  background-color:#ff495c;
+  background-image:url(/images/seo.jpg);
+}
+
+#questioner {
+  display:none;
+}
+
+.button-header{
+  padding:80px 0px 30px 0px;
+}
+
+.button-header .button-wrap{
+  justify-content: flex-end;
+  width: 80%;
+  margin:30px auto;
+}
+
+.header-teamwork{
+  margin-bottom: -5px;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color:#334057;
+  background-image:linear-gradient(to right, rgba(51, 64, 87, 0.8), rgba(51, 64, 87, 0.2)),
+      url("/images/teamwork.jpg");
+}
+
+.header-teamwork .text-block{
+  color:white;
+  width: 80%;
+  margin:15px auto;
+}
+
+.text-link{
+  display: flex;
+  justify-content: flex-end;
+  margin: 30px auto;
+}
+
+.text-link.not-black a{
+  color:#333333;
+}
+
+.text-link a{
+  position:relative;
+}
+
+.text-link.not-black a::after{
+  background-color:#333333;
+}
+
+.text-link a::after{
+  content:" ";
+  position:absolute;
+  height:4px;
+  bottom:0px;
+  left:0px;
+  width:100%;
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: transform 0.2s ease-in-out;
+}
+
+.text-link a:hover::after{
+  transform: scaleX(1);
 }
 
 /*Footer*/
@@ -306,6 +408,24 @@ footer{
 .services-menu li a{
   color:white;
   font-weight: bold;
+  position: relative;
+}
+
+.services-menu li a::after{
+  content:" ";
+  position:absolute;
+  height:4px;
+  bottom:0px;
+  left:0px;
+  width:100%;
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: transform 0.2s ease-in-out;
+  background-color:white;
+}
+
+.services-menu li a:hover::after{
+  transform: scaleX(1);
 }
 
 .desktop-flex{
@@ -336,7 +456,7 @@ footer{
   max-width:30px;
 }
 
-/*Standouts*/
+/*Standouts words*/
 
 .standout{
   background-image: linear-gradient(0deg, rgba(255, 255, 126, 0.3), rgba(255, 255, 126, 0.3)), url(/images/paper.jpg);
@@ -348,6 +468,11 @@ footer{
   -webkit-clip-path: polygon(1% 5%,100% 1%,100% 95%,0% 100%);
           clip-path: polygon(1% 5%,100% 1%,100% 95%,0% 100%);
   display: inline-block;
+  line-height:100%;
+}
+
+.blue-standout{
+  background-image: linear-gradient(0deg, rgba(51, 64, 87, 0.5), rgba(51, 64, 87, 0.5)), url(/images/paper.jpg);
 }
 
 .standout::after{
@@ -369,22 +494,12 @@ footer{
   max-width:100%;
 }
 
+.align-top{
+  align-items: flex-start;
+}
+
 .project-description{
-  width:40%;
-  height: 100%;
-}
-
-.imac-outer-wrap{
-  position:relative;
-  width:55%;
-}
-
-.imac-wrap{
-  margin-top:0px;
-  padding-top:100px;
-  position: relative;
-  height:200vh;
-  left:50%;
+  width:100%;
 }
 
 /* Homepage panel elements */
@@ -413,8 +528,7 @@ footer{
 .panel-collapse{
   flex-wrap: nowrap!important;
   justify-content: space-between;
-  height:30vh;
-  min-height:250px;
+  height:160px;
 }
 
 .panel{
@@ -671,78 +785,8 @@ footer{
 .panel.branding-panel{
 }
 
-/* The imac with borders */
-
-.imac {
-  margin:5px 0px;
-  transform-origin: 0 0;
-  transform: scale(.6) translate(-60%);
-  position: -webkit-sticky;
-  position: sticky;
-  width: 72vw;
-  max-width:1366px;
-  height:45vw;
-  max-height: 768px;
-  border-radius: 30px 30px 25px 25px;
-  border-style: solid;
-  border-color: black;
-  border-width: 35px;
-  background:transparent;
-  top:25vh;
-}
-
-/* Stand */
-
-.imac:after {
-  content: '';
-  display: block;
-  position: absolute;
-  width:19vw;
-  height:14vw;
-  max-height: 202px;
-  left: calc(50% - 9.5vw);
-  margin: 80px auto;
-  background: #808080;
-  background: linear-gradient(to bottom, #808080 0%, #fafafa 54%, #fafafa 56%, #aaa 73%, #aaa 75%, #aaaaaa 85%, #ddd 95%,#ddd 95%, #dddddd 100%);
-  border-radius: 20px;
-  -webkit-clip-path: polygon(15% 0%, 85% 0%, 100% 100%, 0% 100%);
-          clip-path: polygon(15% 0%, 85% 0%, 100% 100%, 0% 100%);
-}
-
-.imac-screen {
-  background-clip: padding-box;
-  width: 100%;
-  height: 100%;
-  border: none!important;
-  padding-bottom:0px!important;
-  background-color: rgba(0,0,0,0);
-  overflow:hidden;
-}
-
-.imac-screen img{
-  padding:0px;
-  width:100%;
-}
-
-.apple-logo{
-  background: #cccccc;
-  background: linear-gradient(to right, #cccccc 0%, #eeeeee 100%);
-  position: absolute;
-  width: calc(100% + 72px);
-  height:100px;
-  margin-left: -36px;
-  z-index: 2;
-  box-shadow: 0px 1px 1px rgba(0,0,0,0.4);
-  border-radius:0px 0px 30px 30px;
-  bottom:-85px;
-}
-
-.apple-logo > .fa-apple{
-  font-size:60px!important;
-  padding-top:15px;
-  text-align:center;
-  display: flex;
-  justify-content: center;
+.image-space{
+  margin:30px auto;
 }
 
 /****************************************************************/
@@ -1185,6 +1229,10 @@ a.viewsource:before {
 
 /***************************************************************/
 
+.is-desktop-only{
+  display:none;
+}
+
 /*Media Queries*/
 
 /*ipad styles*/
@@ -1195,6 +1243,14 @@ a.viewsource:before {
 /*small desktop & large tablet*/
 
 @media only screen and (min-width:800px) {
+  .is-mobile-only{
+    display:none;
+  }
+
+  .is-desktop-only{
+    display:inherit;
+  }
+
   /*Header & Menu*/
 
   nav{
@@ -1270,12 +1326,244 @@ a.viewsource:before {
 /*Desktop*/
 
 @media only screen and (min-width:981px) {
+  p,a{
+    font-size: 14pt;
+  }
+
   .desktop-flex{
     display:flex;
   }
 
+  .content-wrap section{
+    margin:0px;
+  }
+
   .mobile-flex{
     display:none;
+  }
+
+  /* The imac with borders */
+
+  .imac-outer-wrap{
+    position:relative;
+    width:55%;
+  }
+
+  .imac-wrap{
+    margin-top:0px;
+    padding-top:100px;
+    position: relative;
+    height:200vh;
+    left:50%;
+  }
+
+  .imac {
+    margin:5px 0px;
+    transform-origin: 0 0;
+    transform: scale(.6) translate(-60%);
+    position: -webkit-sticky;
+    position: sticky;
+    width: 72vw;
+    max-width:1366px;
+    height:45vw;
+    max-height: 768px;
+    border-radius: 30px 30px 25px 25px;
+    border-style: solid;
+    border-color: black;
+    border-width: 35px;
+    background:transparent;
+    top:25vh;
+  }
+
+  /* Stand */
+
+  .imac:after {
+    content: '';
+    display: block;
+    position: absolute;
+    width:19vw;
+    height:14vw;
+    max-height: 202px;
+    left: calc(50% - 9.5vw);
+    margin: 80px auto;
+    background: #808080;
+    background: linear-gradient(to bottom, #808080 0%, #fafafa 54%, #fafafa 56%, #aaa 73%, #aaa 75%, #aaaaaa 85%, #ddd 95%,#ddd 95%, #dddddd 100%);
+    border-radius: 20px;
+    -webkit-clip-path: polygon(15% 0%, 85% 0%, 100% 100%, 0% 100%);
+            clip-path: polygon(15% 0%, 85% 0%, 100% 100%, 0% 100%);
+  }
+
+  .imac-screen {
+    background-clip: padding-box;
+    width: 100%;
+    height: 100%;
+    border: none!important;
+    padding-bottom:0px!important;
+    background-color: rgba(0,0,0,0);
+    overflow:hidden;
+  }
+
+  .imac-screen img{
+    padding:0px;
+    width:100%;
+  }
+
+  .apple-logo{
+    background: #cccccc;
+    background: linear-gradient(to right, #cccccc 0%, #eeeeee 100%);
+    position: absolute;
+    width: calc(100% + 72px);
+    height:100px;
+    margin-left: -36px;
+    z-index: 2;
+    box-shadow: 0px 1px 1px rgba(0,0,0,0.4);
+    border-radius:0px 0px 30px 30px;
+    bottom:-85px;
+  }
+
+  .apple-logo > .fa-apple{
+    font-size:60px!important;
+    padding-top:15px;
+    text-align:center;
+    display: flex;
+    justify-content: center;
+  }
+
+  /* Panels */
+
+  .panels.panel-collapse{
+    height:275px;
+    max-width:1280px;
+    margin:30px auto;
+  }
+
+  .header-start{
+    background-color:#334057;
+    background-image:none;
+  }
+
+  .header-2{
+  }
+
+  .bg-header{
+    max-width: none;
+    width:100%;
+    margin-top:50px;
+    position: relative;
+    margin-bottom:50px;
+  }
+
+  #questioner {
+    display:block;
+    position: absolute;
+    bottom:0px;
+    max-width:800px;
+    right:10%;
+    -webkit-animation: 1s ease-in 6s forwards slideInFromRight;
+            animation: 1s ease-in 6s forwards slideInFromRight;
+  }
+
+  @keyframe slideInFromRight {
+    0% {
+      transform: translateX(100vw);
+    }
+
+    100% {
+      transform: translateX(0vw);
+    }
+  }
+
+  .bg-header h2{
+    padding-top:180px;
+    padding-bottom:70px;
+    margin-bottom: 30px;
+    font-size:30pt;
+    color:white;
+    text-align: center;
+  }
+
+  .subheading{
+    font-size:20pt;
+  }
+
+  .d-left{
+    justify-content: flex-start;
+  }
+
+  .button-header .text-block h2{
+    font-size:48pt
+  }
+
+  .button-header .text-block p{
+    font-size:18pt;
+  }
+
+  .panels{
+    align-items: stretch;
+    height:80vh;
+    width:95%;
+    margin:30px auto;
+    max-width:1280px;
+  }
+
+  .panel-wrap{
+    height:47.5%;
+    margin-bottom:7px;
+  }
+
+  .panel{
+    width:33%;
+  }
+
+  .is-desktop-only .panel-wrap.panel-wrap-shrink{
+    width:59.9%;
+    height:100%;
+  }
+
+  .is-desktop-only .panel-wrap.panel-wrap-shrink:first-of-type{
+    width:39.9%;
+  }
+
+  .panel.design-panel.panel-shrink{
+    width:25%;
+  }
+
+  .is-desktop-only .panel-wrap.panel-wrap-shrink:first-of-type .panel.panel-shrink{
+    width:49.8%;
+  }
+
+  .panels.is-desktop-only.panel-collapse{
+    display:flex;
+    width:80%;
+    margin:30px auto;
+    max-width: 1280px;
+  }
+
+  .team-member-wrap{
+    display:flex;
+    flex-wrap:nowrap;
+    justify-content: space-between;
+  }
+
+  .team-member-wrap > div{
+    width:50%;
+  }
+
+  .team-bio-wrap{
+    padding:50px;
+  }
+
+  .order-1{
+    order:1;
+  }
+
+  .order-2{
+    order:2;
+  }
+
+  .project-description{
+    width:40%;
+    height: 100%;
   }
 }
 
@@ -1286,6 +1574,10 @@ a.viewsource:before {
 
   .services-menu.desktop-flex,.footer-contact, .social-links, #footer-info{
     max-width:1280px;
+  }
+
+  .bg-header h2{
+    font-size:48pt;
   }
 }
 
