--- a/laravel/resources/css/app.css
+++ b/laravel/resources/css/app.css
@@ -618,7 +618,9 @@ footer{
   .image-space{
     margin:30px auto;
   }
-
+  .imac-outer-wrap{
+    display:none;
+  }
 
 
 /****************************************************************/
@@ -1013,6 +1015,7 @@ a.viewsource:before {
   .is-desktop-only{
     display:inherit;
   }
+  /* *{border: 1px solid red;} */
   /*Header & Menu*/
   nav{
     max-width:1500px;
@@ -1077,14 +1080,20 @@ a.viewsource:before {
 
 /*Desktop*/
 @media only screen and (min-width:981px) {
+  .mobile-image{
+    display:none;
+  }
   p,a{
     font-size: 14pt;
   }
   .desktop-flex{
     display:flex;
   }
-  .content-wrap section{
+  .content-wrap {
     margin:0px;
+  }
+  .content-wrap section, .section{
+    margin: 0 auto;
   }
   .mobile-flex{
     display:none;
@@ -1092,15 +1101,20 @@ a.viewsource:before {
   /* The imac with borders */
 
   .imac-outer-wrap{
+    display:flex;
+    align-items: stretch;
+    justify-content: flex-start;
     position:relative;
     width:55%;
   }
   .imac-wrap{
-  margin-top:0px;
-  padding-top:100px;
-  position: relative;
-  height:200vh;
-  left:50%;
+    margin-top: 0px;
+    padding-top: 100px;
+    position: relative;
+    height: 200vh;
+    left: 40%;
+    max-width: 800px;
+    width: 50%;
   }
 
   .imac {
